<resources>
    <string name="app_name">Helpos</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_picker">Picker</string>
    <string name="estimated_price">Estimated price :</string>
    <string name="ability_to_pay">Ability to pay :</string>
    <string name="none">none</string>
    <string name="call_person">Call PERSON</string>
    <string name="itinerary">ITINERARY</string>
    <string name="cancel_request">CANCEL REQUEST</string>
    <string name="request_fulfilled">REQUEST fulfilled</string>
    <string name="person_helping_you">Person Helping you :</string>
    <string name="name">Name :</string>
    <string name="karma">karma :</string>
    <string name="remove_person">REMOVE PERSON</string>
    <string name="title">Title</string>
    <string name="enter_the_help_request_title_here">Enter the help request title here</string>
    <string name="description">Description</string>
    <string name="enter_description_here">Enter description here</string>
    <string name="enter_price_here">Enter price here</string>
    <string name="are_you_able_to_pay">Are you able to pay ?</string>
    <string name="locate">Locate</string>
    <string name="submit">Submit</string>
    <string name="people_helping">People helping :</string>
    <string name="your_help_requests">Your help requests :</string>
    <string name="requests_you_are_helping">Requests you are helping :</string>
    <string name="people_you_helped">People you helped :</string>
    <string name="sign_out">Sign out</string>
    <string name="helper_text">All of these markers are people in need of help, click on one to start</string>
    <string name="help">HELP</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="organization">Organization ?</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_in">Sign in</string>
    <string name="create_an_account">Create an account</string>
    <string name="yes">yes</string>
</resources>
