<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpRequestAcitivy">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@android:color/black"
            android:textSize="28sp"
            tools:text="Soap :" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="24sp"
            tools:text="I have run out of soap for about
2 days now and I really need soap.
I don't want to go out to risk
my safety. So can someone please
help me and thank you." />

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="16dp"
            android:textSize="20sp"
            tools:text="-Oussema Hassini" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/estimated_price"
                android:textColor="@android:color/black"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="16dp"
                android:textColor="#4DB6AC"
                android:textSize="20sp"
                tools:text="3dt" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/ability_to_pay"
                android:textColor="@android:color/black"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/ability"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="16dp"
                android:text="@string/none"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/person"
            android:visibility="gone"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:textColor="@android:color/black"
                android:textSize="28sp"
                android:text="@string/person_helping_you" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:layout_margin="16dp"
                    android:textColor="@android:color/black"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16dp"
                    tools:text="Hassan Hosni"
                    android:textSize="20sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/karma"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="16dp"
                    android:textColor="@android:color/black"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/karma"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16dp"
                    tools:text="0"
                    android:textSize="20sp" />
            </RelativeLayout>

            <Button
                android:id="@+id/remove"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="22dp"
                android:text="@string/remove_person"
                style="@style/RedButton"/>
        </LinearLayout>

        <Button
            android:id="@+id/call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="40dp"
            android:text="@string/call_person"
            style="@style/GreenButton"/>

        <Button
            android:id="@+id/roadto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="40dp"
            android:text="@string/itinerary"
            style="@style/GreenButton"/>

        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="24dp"
            android:text="@string/cancel_request"
            style="@style/RedButton"/>

        <Button
            android:id="@+id/fulfilled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="24dp"
            android:text="@string/request_fulfilled"
            android:visibility="gone"
            style="@style/GreenButton"/>
    </LinearLayout>
</ScrollView>