<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="452dp"
    android:background="@drawable/rounded_dialog"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:behavior_peekHeight="72dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/emptyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp"
            android:text="@string/helper_text"
            android:textAlignment="center"
            android:textSize="20sp"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textColor="@android:color/black"
                android:textSize="28sp"
                tools:text="Soap :" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:textSize="24sp"
                tools:text="I have run out of soap for about
2 days now and I really need soap.
I don't want to go out to risk
my safety. So can someone please
help me and thank you." />

            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="16dp"
                android:textSize="20sp"
                tools:text="-Oussema Hassini" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/estimated_price"
                    android:textColor="@android:color/black"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16dp"
                    android:textColor="#4DB6AC"
                    android:textSize="20sp"
                    tools:text="3dt" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/ability_to_pay"
                    android:textColor="@android:color/black"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/ability"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16dp"
                    android:text="@string/none"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp" />
            </RelativeLayout>

            <Button
                android:id="@+id/help"
                style="@style/RedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="24dp"
                android:text="@string/help" />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>